# MCP--Data-Exploration

./: README.md  setup_claude_windows.py
mcp-data-exploration/: README.md  pyproject.toml
mcp-server-data-exploration/: .gitattributes  .gitignore  setup_claude_windows.py  simple_dashboard.py  student_dashboard.py  test_streamlit.py
