[project]
name = "mcp-server-ds"
version = "0.1.6"
description = "A MCP server Data Exploration project"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
 "mcp>=1.0.0",
 "numpy>=2.1.3",
 "pandas>=2.2.3",
 "scikit-learn>=1.5.2",
 "scipy>=1.14.1",
 "statsmodels>=0.14.4",
 "seaborn>=0.13.2",
 "plotly>=5.15.0",
 "streamlit>=1.42.0",
 "matplotlib>=3.7.2",
 "altair>=4.2.2",
 "bokeh>=2.4.3",
 "pillow>=9.3.0",
 "pyyaml>=6.0.2",
 "pyarrow>=11.0.0",
 "jupyter>=1.0.0",
]
[[project.authors]]
name = "J.P.O'Reilly"
email = "jp.oreilly@hotmail.com"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project.scripts]
mcp-server-ds = "mcp_server_ds:main"
